# AmocrmIntegration

./: .example.env  .gitignore  README.md  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
src/app/application/common/exceptions/: base.py  ports.py
src/app/application/common/ports/: lead_dto.py  lead_gateway.py  sheets_gateway.py  sheets_lead_gateway.py
src/app/application/use_cases/: lead_changed.py  upsert_lead.py
src/app/bootstrap/: configs.py
src/app/bootstrap/entrypoints/: api.py
src/app/bootstrap/ioc/: application.py  config.py  containers.py  infrastructure.py
src/app/infrastructure/adapters/: google_sheets.py  lead_gateway.py  redis_lead_google_sheets.py
src/app/presentation/: exceptions.py
src/app/presentation/api/: root.py
src/app/presentation/api/amocrm/: router.py
src/apps_script/: script.gs
